--- a/python.css
+++ b/python.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0%;
+}
+
+
+
 nav {
     height: 70px;
     display: flex;
@@ -17,7 +23,7 @@ nav .brand img {
 }
 
 nav .brand a {
-    color: #fff;
+    color:#fff;
     text-decoration: none;
     font-size: 1.75rem;
     font-weight: bold;
@@ -129,10 +135,10 @@ header {
 
 
 .home-main {
-    background: url("background.png") no-repeat;
+    background: url("videotutorial.png") no-repeat;
 
     background-size: cover;
-    min-height: 100vh;
+    min-height: 120vh;
 }
 
 
@@ -196,4 +202,17 @@ u {
     .about-companies .company-logos {
         font-size: 1rem;
     }
+}
+
+
+.padding {
+    padding-left: 280px;
+    background-color:#f1f1f1f1;
+}
+.python h1{
+    font-size: 45px;
+}
+
+.python{
+    background-color:#f1f1f1f1; 
 }
